--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free 100$ shopping voucher</title>
+    <title>Free 100$ Temu Gift Cars</title>
 </head>
 <body>
-    <h1oox>Click start to get 100$ temu voucher</h1>
-    <button id="startBtn">Start</button>
+    <h1>Click to get the gift card</h1>
+    <button id="startBtn">Gift Card!!!</button>
     <p id="status"></p>
-
     <script src="script.js"></script>
 </body>
 </html>
