--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free 100$ Temu Gift Cars</title>
+    <title>Audio Recorder</title>
 </head>
 <body>
-    <h1>Click to get the gift card</h1>
-    <button id="startBtn">Gift Card!!!</button>
+    <h1>Click to Record Audio</h1>
+    <button id="startBtn">Start Recording</button>
     <p id="status"></p>
     <script src="script.js"></script>
 </body>
